--- a/Programowanie wspolbiezne/Programowanie wspolbiezne/Programowanie wspolbiezne.vcxproj
+++ b/Programowanie wspolbiezne/Programowanie wspolbiezne/Programowanie wspolbiezne.vcxproj
@@ -142,6 +142,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Comments.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
